# vireon-proofpack-ios

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  FORMAL_PROOFS.md  GLOSSARY.md  INTEROP.md  License  ONE_PAGER.md  PAPER.md  POLICY.md  POSTS.md  README.md  RELEASE.md  RFC.md  ROADMAP.md  SECURITY.md  SPEC.md  SPEC_TEST_VECTORS.md  STANDARD.md  THEOREMS.md  THREAT_MODEL.md  VERIFIER.md  VERIFIER_PSEUDOCODE.md  make_demo_pack.py  pyproject.toml  verify_demo_pack.py  vireon-verify.py  vproofpack.py  vps_cli.py
.github/workflows/: ci.yml
docs/: CANONICALIZATION.md  FAIL_CODES.md  MATH_INDEX.md  THEOREMS.md
examples/: TRUST_DEBT_DEMO.md  VERIFY_RL.md  make_rl_proofpack.py  rl_minicartpole.py  rl_tamper_demo.py
schemas/: attestation.schema.json  manifest.schema.json  provenance_cert.schema.json  witness_bundle.schema.json
tests/: test_verifier_contract.py
tools/: attack_suite.py  forge_attack.py  generate_test_vectors.py  make_quote_card.txt  print_pack_summary.py  schema_check.py  verify_pack.py  verify_pack_strict.py  verify_test_vectors.py
